# Python-and-Rust-Practice

./: .gitignore  Makefile  README.md  dockerfile  lsblk_selector.py  uv-packaging.md
blkpy/: main.py
blkpy-cli/: Makefile  README.md  checking_os.py  dev.dockerfile  dockerfile  lsblk_selector.py  notes.md  release.dockerfile  requirements.txt  setup.py
blkpy-cli/blkpy/: blkpy_runner.py  log_formatter.py  main.py
blkpy-cli/blkpy/commands/: __init__.py  info.py  nice.py  print_file.py  show_time.py
blkrust-cli/: Cargo.toml  Makefile  Readme.md  dockerfile  keep.dockerfile  release-dockerfile  release-linux.dockerfile  release.dockerfile
blkrust-cli/src/: args.rs  command_runner.rs  custom_logger.rs  lsblk.rs  main.rs
blkrust-cli/src/cli_parser/: command.rs  commands.rs
blkrust-cli/src/cli_parser/command/: info.rs  mod.rs  print_file.rs  time.rs
python-modules/: test_import.py
python-modules/modules/: __init__.py  constants.py
python-modules/modules/sub/: __init__.py  command.py
python-rust-library/: Makefile  creating_rust_libraries_for_python.md  requirements.txt  show_difference.py
python-rust-library/digits-pi/: .gitignore  Cargo.toml
python-rust-library/digits-pi/src/: lib.rs  number_list.rs
python-rust-library/py-rs-call/: Cargo.toml
python-rust-library/py-rs-call/src/: main.rs  test_function_calling.rs
python-rust-library/test/: test_data_type.py  test_digits_pi.py  test_number_list.py
python-rust-library/test/to_call/: test_single_function.py
python-rust-library/to_call/: complex_function.py  nested_sum.py  single_function.py
rupy-uv/: Cargo.toml  README.md  pyproject.toml
rupy-uv/src/: lib.rs
rupy-uv/src/rupy_uv/: __init__.py  _core.pyi
uv-import/: README.md  main.py  pyproject.toml
uv-lib/: README.md  pyproject.toml
uv-lib/src/uv_lib/: __init__.py
