[project]
name = "rupy-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yasuomaidana"}
]
requires-python = ">=3.12"
dependencies = []

#[project.scripts]
#rupy-uv = "rupy_uv:main"

[tool.maturin]
module-name = "rupy_uv._core"
python-packages = ["rupy_uv"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
