[project]
name = "uv-import"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "yasuomaidana" }
]

dependencies = [
    "uv-lib",
]

[tool.uv.sources]
uv-lib = { path = "../uv-lib/dist/uv_lib-0.1.0-py3-none-any.whl" }

####### Required to use hatchling
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
####### ----------

#[build-system]
#requires = ["setuptools>=42", "wheel"]
#build-backend = "setuptools.build_meta"

[project.scripts]
uv-main = "main:main"